--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
             </article>
           </div>
       </section>
-      <section class="faq" id="faq">
+     <section class="faq" id="faq">
         <h2 class="title">Frequently Asked Questions</h2>
         <div class="accordion">
           <div class="accordion-item">
@@ -451,22 +451,22 @@
             <button id="accordion-button-2" aria-expanded="false"><span class="accordion-title">What is the last
                 date for registration?</span><span class="icon" aria-hidden="true"></span></button>
             <div class="accordion-content">
-              <p>It is 28th of July.</p>
+              <p>It is 21st of September.</p>
             </div>
           </div>
           <div class="accordion-item">
             <button id="accordion-button-3" aria-expanded="false"><span class="accordion-title">How many events
                 can a single person participate in?</span><span class="icon" aria-hidden="true"></span></button>
             <div class="accordion-content">
-              <p>One student can participate in a maximum of one event.</p>
+              <p>One student can participate in a maximum of one pre-event annd one live event.</p>
             </div>
           </div>
           <div class="accordion-item">
             <button id="accordion-button-4" aria-expanded="false"><span class="accordion-title">Whom to contact
                 in case of any query?</span><span class="icon" aria-hidden="true"></span></button>
             <div class="accordion-content">
-              <p>The query can be solved either by the integrated website chatbot or you can contact any of
-                the tech board members listed on the website.</p>
+              <p>The query can be solved contacting any of
+                the tech board members listed on the last page of the brochure.</p>
             </div>
           </div>
           <div class="accordion-item">
