--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
     </a>
       </section>
       <section class="team">
-        <h2 class="title">Teams</h2>
+        <h2 class="title">Team</h2>
         <div class="row">
           <article class="profile">
             <div class="profile-image">
