--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
             <button id="accordion-button-5" aria-expanded="false"><span class="accordion-title">What is the
                 duration of the event?</span><span class="icon" aria-hidden="true"></span></button>
             <div class="accordion-content">
-              <p>No, the registration is free of cost.</p>
+              <p>The duration of the following events have been mentioned in the brochure</p>
             </div>
           </div>
           <div class="accordion-item">
