--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </div>
     <section class="events" id="events">
 
-      <a href="./brochure.pdf" target="_blank" class="card-wrapper">
+      <a href="./brochure.pdf#page=10" target="_blank" class="card-wrapper">
         <div class="card" data-scroll data-scroll-speed="4.5" style="background-image: url('./assets/events/3.png');">
           <div class="card-overlay"></div>
           <div class="card-head">
@@ -143,7 +143,7 @@
           </div>
         </div>
     </a>
-      <a href="./brochure.pdf" target="_blank" class="card-wrapper">
+      <a href="./brochure.pdf#page=3" target="_blank" class="card-wrapper">
         <div class="card" data-scroll data-scroll-speed="1.5" style=" background-image: url('assets/events/1.png');">
           <div class="card-overlay"></div>
           <div class="card-head">
@@ -162,7 +162,7 @@
           </div>
         </div>
     </a>
-      <a href="./brochure.pdf" target="_blank" class="card-wrapper">
+      <a href="./brochure.pdf#page=4" target="_blank" class="card-wrapper">
         <div class="card" data-scroll data-scroll-speed="1.5" style=" background-image: url(./assets/events/9.png);">
           <div class="card-overlay"></div>
           <div class="card-head">
@@ -181,7 +181,7 @@
           </div>
         </div>
     </a>
-      <a href="./brochure.pdf" target="_blank" class="card-wrapper">
+      <a href="./brochure.pdf#page=5" target="_blank" class="card-wrapper">
         <div class="card" data-scroll data-scroll-speed="4.5" style=" background-image: url(./assets/events/11.png);">
           <div class="card-overlay"></div>
           <div class="card-head">
@@ -200,7 +200,7 @@
           </div>
 
         </div>
-      <a href="./brochure.pdf" target="_blank" class="card-wrapper">
+      <a href="./brochure.pdf#page=7" target="_blank" class="card-wrapper">
         <div class="card" data-scroll data-scroll-speed="4.5" style=" background-image: url(./assets/events/10.png);">
           <div class="card-overlay"></div>
           <div class="card-head">
@@ -219,7 +219,7 @@
           </div>
         </div>
     </a>
-      <a href="./brochure.pdf" target="_blank" class="card-wrapper">
+      <a href="./brochure.pdf#page=8" target="_blank" class="card-wrapper">
         <div class="card" data-scroll data-scroll-speed="1.5" style=" background-image: url(./assets/events/5.png)">
           <div class="card-overlay"></div>
           <div class="card-head">
@@ -238,7 +238,7 @@
           </div>
         </div>
     </a>
-      <a href="./brochure.pdf" target="_blank" class="card-wrapper">
+      <a href="./brochure.pdf#page=9" target="_blank" class="card-wrapper">
         <div class="card" data-scroll data-scroll-speed="2.5" style=" background-image: url(assets/events/2.png)">
           <div class="card-overlay"></div>
           <div class="card-head">
@@ -257,7 +257,7 @@
           </div>
         </div>
     </a>
-      <a href="./brochure.pdf" target="_blank" class="card-wrapper">
+      <a href="./brochure.pdf#page=11" target="_blank" class="card-wrapper">
         <div class="card" data-scroll data-scroll-speed="3.5" style=" background-image: url(assets/events/4.png)">
           <div class="card-overlay"></div>
           <div class="card-head">
@@ -276,7 +276,7 @@
           </div>
         </div>
     </a>
-      <a href="./brochure.pdf" target="_blank" class="card-wrapper">
+      <a href="./brochure.pdf#page=12" target="_blank" class="card-wrapper">
         <div class="card" data-scroll data-scroll-speed="1.5" style=" background-image: url(assets/events/Event_X.png)">
           <div class="card-overlay"></div>
           <div class="card-head">
@@ -295,7 +295,7 @@
           </div>
         </div>
     </a>
-      <a href="./brochure.pdf" target="_blank" class="card-wrapper">
+      <a href="./brochure.pdf#page=13" target="_blank" class="card-wrapper">
         <div class="card" data-scroll data-scroll-speed="6.5" style="background-image: url(assets/events/7.png)">
           <div class="card-overlay"></div>
           <div class="card-head">
@@ -314,7 +314,7 @@
           </div>
         </div>
     </a>
-      <a href="./brochure.pdf" target="_blank" class="card-wrapper">
+      <a href="./brochure.pdf#page=14" target="_blank" class="card-wrapper">
         <div class="card" style=" background-image: url(assets/events/6.png)">
           <div class="card-overlay"></div>
           <div class="card-head">
@@ -333,7 +333,7 @@
           </div>
         </div>
     </a>
-      <a href="./brochure.pdf" target="_blank" class="card-wrapper">
+      <a href="./brochure.pdf#page=6" target="_blank" class="card-wrapper">
         <div class="card" style=" background-image: url(assets/events/Digital_Art.jpg)">
           <div class="card-overlay"></div>
           <div class="card-head">
