--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
           </article>
           <article class="profile">
             <div class="profile-image">
-              <img src="./assets/team/arpan.jpeg" />
+              <img src="./assets/arpan.jpeg" />
             </div>
             <h2 class="profile-username">Arpan Varma</h2>
             
@@ -384,7 +384,7 @@
           <div class="row">
             <article class="profile">
               <div class="profile-image">
-                <img src="./assets/team/anant.jpg" />
+                <img src="./assets/anant.jpeg" />
               </div>
               <h2 class="profile-username">Anant Singh</h2>
               
