--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
           </article>
           <article class="profile">
             <div class="profile-image">
-              <img src="./assets/team/arpan.jpeg" />
+              <img src="./assets/03bf326c-127b-4e2b-907e-9e820be03567.jpeg" />
             </div>
             <h2 class="profile-username">Arpan Varma</h2>
             
