--- a/index.html
+++ b/index.html
@@ -121,6 +121,19 @@
       <p class="subt">About</p>
       <h3 class="title">COSMA</h3>
       <p class="subp">COSMA is an inter-school Tech Event held every year at St. Mary's Academy, Meerut Cantt.</p>
+      <p class="down-text">Download the COSMA logo now!</p>
+      <div class="down">
+      <a href="./assets/cosma_logo.jpg" class="down-button" download>
+        <ul>
+            <li>&#68;ownload</li>
+            <li>&#68;ownloading</li>
+            <li>Downloaded</li>
+        </ul>
+        <div>
+            <svg viewBox="0 0 24 24"></svg>
+        </div>
+    </a>
+    </div>
     </div>
     <section class="events" id="events">
 
