--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
 
       </div>
       <div class="col col4">
-        <p class="credits">Website Developed by:<br> <a class="cred" href="https://linkedin.com/in/rohan-sharma-1906" target="_blank">Rohan Sharma</a></p>
+        <p class="credits">Website Developed by:<br> <a class="cred" href="https://thelinuxguy.tech" target="_blank">TheLinuxGuy</a></p>
       </div>
     </div>
     <div class="backdrop"></div>
